--- a/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
@@ -12,7 +12,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <h3>{{fullName}}</h3>
+                <!-- <h3>{{fullName}}</h3> -->
               </li>
             </ul>
             <button type="button" class="btn btn-info" (click)="addProduct()">Add Product</button>&nbsp;&nbsp;
