--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
@@ -5,6 +5,7 @@
     <input type="checkbox" id="show-menu">
     <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
     <div class="nav-content">
+        <p-button class="home-side-nav" icon="pi pi-bars" [link]="true" (onClick)="sidebarVisible = true" />
       <div class="logo">
         <a routerLink="">
         <img class="logo-img" src="https://i.ibb.co/LRDshNz/img1.jpg" alt="ShopCart"> 
@@ -17,14 +18,7 @@
         <li><a ><mat-icon matBadge="1" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
       </ul>
       <ul class="links" *ngSwitchCase="'seller'">
-        <!-- Seller name with profile image -->
-        <p-chip [ngStyle]="{'margin-top': '17px'}"
-        label="{{fullName}}" 
-        image="https://primefaces.org/cdn/primeng/images/demo/avatar/asiyajavayant.png" 
-        alt="Avatar image" 
-        />
         <li><a><i class="fa-solid fa-house"></i></a></li>
-        <li><a (click)="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
         <li><a ><mat-icon matBadge="1" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
       </ul>
     </div>
@@ -33,5 +27,52 @@
       <input  type="text" placeholder="Search Something..." required>
       <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
     </form>
+    <ul class="links" *ngSwitchCase="'seller'">
+      <p-button [ngStyle]="{'margin': '14px'}" type="button" class="mr-2" 
+      icon="pi pi-user" [rounded]="true" severity="info" [link]="true" (onClick)="sidebarVisible2 = true">
+      <p-avatar [ngStyle]="{'margin': '19px'}"
+      image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" />
+      </p-button>
+    </ul>
   </nav>
+</div>
+
+
+<div class="card flex justify-content-center">
+
+  <!-- Left Side Menu -->
+  <p-sidebar [(visible)]="sidebarVisible">
+    <div class=" flex justify-content-center">
+      <ul [ngStyle]="{'list-style': 'none'}">
+        <li>
+          <a style="cursor: pointer; padding: 12px;">Category</a>
+        </li><br>
+        <li>
+          <a style="cursor: pointer; padding: 12px;">Category</a>
+        </li><br>
+        <li>
+          <a style="cursor: pointer; padding: 12px;">Category</a>
+        </li>
+      </ul>
+  </div>
+  </p-sidebar>
+
+  <!-- Right Side Menu -->
+  <p-sidebar [(visible)]="sidebarVisible2" position="right">
+    <div class=" flex justify-content-center">
+      <ul [ngStyle]="{'list-style': 'none'}">
+        <li>
+           <!-- Seller name with profile image -->
+          <p-chip [ngStyle]="{'margin-top': '17px'}" label="{{fullName}}" 
+          image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" alt="Avatar image"/>
+        </li><br>
+        <li>
+          <a style="cursor: pointer; padding: 12px; color: black;" (click)="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;&nbsp;Sign-Out</a>
+        </li><br>
+        <li>
+          <a style="cursor: pointer; padding: 12px;"><i class="fa fa-gear">&nbsp;&nbsp;Setting</i></a>
+        </li>
+      </ul>
+  </div> 
+</p-sidebar>
 </div>
