--- a/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
@@ -83,8 +83,8 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
           <td mat-cell *matCellDef="let element">             
             <div class="btn-group btn-group-sm" role="group">
-            <button (click)="updateProduct(element._id)"  type="button" class="btn btn-outline-primary" ><i class="bi bi-pencil-fill"></i></button>
-            <button (click)="deleteProduct(element._id)"  type="button" class="btn btn-outline-primary" ><i class="bi bi-trash-fill"></i></button>
+            <button (click)="updateProduct(element._id)" type="button" class="btn btn-outline-primary" ><i class="bi bi-pencil-fill"></i></button>
+            <button (click)="deleteProduct(element._id)" type="button" class="btn btn-outline-primary trash" ><i class="bi bi-trash-fill"></i></button>
           </div>
         </td>
         </ng-container>
