product_details_page_ui

--- a/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
@@ -76,7 +76,7 @@
     <p>Summer Collection New Modern Design</p>
     <div class="pro-container">
       <div class="pro" *ngFor="let items of products">
-        <img [src]="items.productImage" alt="Carton Leave Tshirts">
+        <img (click)="productDetails(items._id)" [src]="items.productImage" alt="Carton Leave Tshirts">
         <div class="des">
           <span>adidas</span>
           <h5>{{items.productName}}</h5>
