--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
@@ -13,7 +13,8 @@
       </a>
     </div>
       <ul class="links" *ngSwitchCase="'default'">
-        <li><a routerLink="login" class="nav-login"><i class="fa-solid fa-user"></i></a></li>
+        <li><a class="nav-login"><i class="fa-solid fa-user"></i></a></li>
+        <li><a routerLink="login"><i class="fa fa-store"></i></a></li>
         <li><a ><mat-icon matBadge="1" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
       </ul>
       <ul class="links" *ngSwitchCase="'seller'">
