--- a/Frontend/Shopcart/src/app/Pages/user-auth/user-register/user-register.component.html
+++ b/Frontend/Shopcart/src/app/Pages/user-auth/user-register/user-register.component.html
@@ -4,7 +4,7 @@
 
 
   <div class="wrapper">
-    <form class="login-box" [formGroup]="registerForm" (ngSubmit)="submitDetails()">
+    <form class="login-box" [formGroup]="UserRegisterForm" (ngSubmit)="UsersubmitDetails()">
       <div class="login-header">
         <span>Register</span>
       </div>
@@ -44,7 +44,7 @@
       <small *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)" class="block p-error">
       <div *ngIf="confirmPassword.errors?.['required']"> Confirm the password </div>
       </small>
-      <small class="block p-error" *ngIf="registerForm.errors?.['passwordMismatch'] && confirmPassword.valid && password.valid">
+      <small class="block p-error" *ngIf="UserRegisterForm.errors?.['passwordMismatch'] && confirmPassword.valid && password.valid">
         Password should match
       </small>
 
@@ -64,10 +64,10 @@
       </div>
 
       <div class="input_box">
-        <input type="submit" [disabled]="registerForm.invalid" class="input-submit" value="Ragister">
+        <input type="submit" [disabled]="UserRegisterForm.invalid" class="input-submit" value="Ragister">
       </div>
       <div class="register">
-        <span>If you have an account ? <a routerLink="/login">Login</a></span>
+        <span>If you have an account ? <a routerLink="/user-login">Login</a></span>
       </div>
     </form>
   </div>
