--- a/Frontend/Shopcart/src/app/Pages/user-auth/user-login/user-login.component.html
+++ b/Frontend/Shopcart/src/app/Pages/user-auth/user-login/user-login.component.html
@@ -38,7 +38,7 @@
         </div>
         
         <div class="forgot">
-          <a >Forgot password ?</a>
+          <a (click)="forgotPsw()">Forgot password ?</a>
         </div>
       </div>
 
