--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.css
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.css
@@ -34,6 +34,7 @@ nav .nav-content {
   width: 100%;
 }
 nav .nav-content .links {
+  cursor: pointer;
   margin-left: 80px;
   display: flex;
   gap: 10px;
