--- a/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.html
+++ b/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.html
@@ -129,7 +129,7 @@
                 </li>
               </ul>
   
-              <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block">
+              <button (click)="Checkout()" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block">
                 Go to checkout
               </button>
             </div>
