--- a/Frontend/Shopcart/src/app/Pages/seller/add-product/add-product.component.html
+++ b/Frontend/Shopcart/src/app/Pages/seller/add-product/add-product.component.html
@@ -6,17 +6,13 @@
       
     <div class="container"> <!-- open container -->
        <div class="row"> <!--  open row -->
-         
-         <div id="form-header" class="col-12">
-           <h1 id="title">Add Products</h1>
-         </div>
        </div> <!--  close row --> 
       
-      <div class="row"> <!--  open row -->    
+      <div class="row" id="form-header"> <!--  open row -->    
           <div id="form-tagline" class="col-md-4">
               <div class="form-tagline">
                   <i class="fa-solid fa-cart-shopping"></i>
-                  <h2>Add Details</h2>
+                  <h2>Add Product</h2>
                   <p id="description" class="lead">Add your desire Products</p>
               </div>
           </div>
