--- a/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.css
+++ b/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.css
@@ -9,6 +9,10 @@
 .trash:hover{
     background: #ff8888;
 }
+.navbar-brand{
+    font-family: Montserrat;
+    font-size: 24px;
+}
 /* .fa-trash:before {
     content: "\f1f8";
     cursor: pointer;
