--- a/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/seller/seller-home/seller-home.component.html
@@ -3,9 +3,9 @@
 
 <div class="container"><br><br>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Seller Home</a>
+          <a class="navbar-brand" href="#">Products List</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,7 +33,7 @@
         <!-- Product Id -->
         <ng-container matColumnDef="productId">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Product&nbsp;Id </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          <td mat-cell *matCellDef="let element"> 6466 </td>
         </ng-container>
       
         <!-- Product Name -->
