--- a/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.css
+++ b/Frontend/Shopcart/src/app/Pages/cart/cart/cart.component.css
@@ -4,19 +4,19 @@
 }
 .productName{
     font-family: Jost;
-    font-size: 18px;
+    font-weight: 500;
 }
 .Summary{
     font-family: Montserrat;
-    font-size: 16px;
+    font-size: 14px;
 }
 .total-amount{
     font-family: Montserrat;
-    font-size: 15px;
+    font-size: 13px;
 }
 .fontStyle{
     font-family: Montserrat;
-    font-size: 15px;
+    font-weight: 500;
 }
 .py-5{
     margin-top: 40px;
