--- a/Frontend/Shopcart/src/app/Pages/order/orders/orders.component.css
+++ b/Frontend/Shopcart/src/app/Pages/order/orders/orders.component.css
@@ -1,5 +1,74 @@
-.order-list{
-    text-align: center;
-    margin-top: 110px;
-    margin-bottom: 30px;
-} 
+body {
+  background-color: mintcream;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.btn-dark{
+background-color: white;
+color: black;
+border: none;
+}
+.heading{
+  margin-top: 100px;
+  text-align: center;
+  font-family: Montserrat;
+}
+.orderId{
+  margin-bottom: 12px;
+}
+.delete-item{
+  text-align: end;
+}
+.deleteItem{
+  text-align: end;
+}
+.card {
+  max-height: 11em;
+  flex-direction: row;
+  background-color: #696969;
+  border: 0;
+  box-shadow: 0 7px 7px rgba(0, 0, 0, 0.18);
+  margin: 3em auto;
+}
+.card.dark {
+  color: #fff;
+}
+.card.card.bg-light-subtle .card-title {
+  color: dimgrey;
+}
+
+.card img {
+  max-width: 11%;
+  margin: auto;
+  padding: 0.5em;
+  border-radius: 0.7em;
+}
+.card-body {
+  display: flex;
+  justify-content: space-between;
+}
+.text-section {
+  max-width: 60%;
+}
+.cta-section {
+  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.cta-section .btn {
+  padding: 0.3em 0.5em;
+  /* color: #696969; */
+}
+.card.bg-light-subtle .cta-section .btn {
+  background-color: #898989;
+  border-color: #898989;
+}
+@media screen and (max-width: 475px) {
+  .card {
+    font-size: 0.9em;
+  }
+}
