--- a/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
+++ b/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
@@ -1,3 +1,4 @@
+
 .productImage{
 	width: 100%;
     height: 400px;
@@ -193,6 +194,14 @@
 	width: 60px;
 	text-align: center;
 }
+.color{
+	display: flex;
+}
+.color h3{
+	cursor: pointer;
+	margin-right: 15px;
+	height: 20px;
+}
 .round-black-btn {
 	cursor: pointer;
 	border-radius: 4px;
@@ -279,7 +288,7 @@
 /* Add to cart button code  */
 
 .product-color{
-    border: 3px solid #000;
+    border: 2px solid #000;
     width: 20px;
     height: 20px;
     border-radius: 50%;
