order_details_page_bug_fix

--- a/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.css
+++ b/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.css
@@ -1,7 +1,15 @@
 .gradient-custom {
     margin-top: 50px;
-    }
-    .heading{
+}
+.heading{
     font-family: Montserrat;
     font-size: 15px;
-    }
+}
+.pt-2 {
+    padding-top: 1.5rem !important;
+}
+p.text-muted.mb-0 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
