--- a/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.html
+++ b/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.html
@@ -6,7 +6,7 @@
         <div class="card" style="border-radius: 10px">
           <div class="card-header px-4 py-5">
             <h5 class="text-muted mb-0 heading">
-              Thanks for your Order, <span style="color: #a8729a">Anna</span>!
+              Thanks for your Order, <span style="color: #a8729a">{{UserfullName}}</span>!
             </h5>
           </div>
           <div class="card-body p-4">
@@ -15,14 +15,14 @@
               <p class="small text-muted mb-0">Receipt Voucher : 1KAU9-84UIL</p>
             </div>
 
-            <div class="row">
+            <div class="row" *ngFor="let order of orderProductData">
               <div class="col-6">
                 <div class="card shadow-0 border mb-4">
                   <div class="card-body">
                     <div class="row">
                       <div class="col-md-2">
                         <img
-                          src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/13.webp"
+                          src="{{order.productImage}}"
                           class="img-fluid"
                           alt="Phone"
                         />
@@ -30,27 +30,27 @@
                       <div
                         class="col-md-2 text-center d-flex justify-content-center align-items-center"
                       >
-                        <p class="text-muted mb-0">Samsung Galaxy</p>
+                        <p class="text-muted mb-0">{{order.productName}}</p>
                       </div>
                       <div
                         class="col-md-2 text-center d-flex justify-content-center align-items-center"
                       >
-                        <p class="text-muted mb-0 small">White</p>
+                        <p class="text-muted mb-0 small">{{order.productColour}}</p>
                       </div>
                       <div
                         class="col-md-2 text-center d-flex justify-content-center align-items-center"
                       >
-                        <p class="text-muted mb-0 small">Capacity: 64GB</p>
+                        <p class="text-muted mb-0 small">{{order.productDescription}}</p>
                       </div>
                       <div
                         class="col-md-2 text-center d-flex justify-content-center align-items-center"
                       >
-                        <p class="text-muted mb-0 small">Qty: 1</p>
+                        <p class="text-muted mb-0 small">Qty: {{order.productQuantity}}</p>
                       </div>
                       <div
                         class="col-md-2 text-center d-flex justify-content-center align-items-center"
                       >
-                        <p class="text-muted mb-0 small">$499</p>
+                        <p class="text-muted mb-0 small">{{order.price | currency: 'INR'}}</p>
                       </div>
                     </div>
                     <hr
@@ -91,110 +91,33 @@
                     </div>
                   </div>
                 </div>
-                <div class="card shadow-0 border mb-4">
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-md-2">
-                        <img
-                          src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/1.webp"
-                          class="img-fluid"
-                          alt="Phone"
-                        />
-                      </div>
-                      <div
-                        class="col-md-2 text-center d-flex justify-content-center align-items-center"
-                      >
-                        <p class="text-muted mb-0">iPad</p>
-                      </div>
-                      <div
-                        class="col-md-2 text-center d-flex justify-content-center align-items-center"
-                      >
-                        <p class="text-muted mb-0 small">Pink rose</p>
-                      </div>
-                      <div
-                        class="col-md-2 text-center d-flex justify-content-center align-items-center"
-                      >
-                        <p class="text-muted mb-0 small">Capacity: 32GB</p>
-                      </div>
-                      <div
-                        class="col-md-2 text-center d-flex justify-content-center align-items-center"
-                      >
-                        <p class="text-muted mb-0 small">Qty: 1</p>
-                      </div>
-                      <div
-                        class="col-md-2 text-center d-flex justify-content-center align-items-center"
-                      >
-                        <p class="text-muted mb-0 small">$399</p>
-                      </div>
-                    </div>
-                    <hr
-                      class="mb-4"
-                      style="background-color: #e0e0e0; opacity: 1"
-                    />
-                    <div class="row d-flex align-items-center">
-                      <div class="col-md-2">
-                        <p class="text-muted mb-0 small">Track Order</p>
-                      </div>
-                      <div class="col-md-10">
-                        <div
-                          class="progress"
-                          style="height: 6px; border-radius: 16px"
-                        >
-                          <div
-                            class="progress-bar"
-                            role="progressbar"
-                            style="
-                              width: 20%;
-                              border-radius: 16px;
-                              background-color: #a8729a;
-                            "
-                            aria-valuenow="20"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                        <div class="d-flex justify-content-around mb-1">
-                          <p class="text-muted mt-1 mb-0 small ms-xl-5">
-                            Out for delivary
-                          </p>
-                          <p class="text-muted mt-1 mb-0 small ms-xl-5">
-                            Delivered
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
   
               <div class="col-6">
                 <div class="d-flex justify-content-between pt-2">
                   <p class="fw-bold mb-0">Order Details</p>
                   <p class="text-muted mb-0">
-                    <span class="fw-bold me-4">Total</span> $898.00
+                    <span class="fw-bold me-4">Total</span> {{order.productPrice | currency: 'INR'}}
                   </p>
                 </div>
             
                 <div class="d-flex justify-content-between pt-2">
                   <p class="text-muted mb-0">Invoice Number : 788152</p>
                   <p class="text-muted mb-0">
-                    <span class="fw-bold me-4">Discount</span> $19.00
+                    <span class="fw-bold me-4">Discount</span> {{order.discount | currency: 'INR'}}
                   </p>
                 </div>
             
                 <div class="d-flex justify-content-between">
-                  <p class="text-muted mb-0">Invoice Date : 22 Dec,2019</p>
-                  <p class="text-muted mb-0">
-                    <span class="fw-bold me-4">GST 18%</span> 123
-                  </p>
+                  <p class="text-muted mb-0">Invoice Date : 22 Dec,2024</p>
                 </div>
             
                 <div class="d-flex justify-content-between mb-5">
                   <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>
                   <p class="text-muted mb-0">
-                    <span class="fw-bold me-4">Delivery Charges</span> Free
+                    <span class="fw-bold me-4">Delivery Charges</span> {{order.shipping | currency: 'INR'}}
                   </p>
-                </div><br><br><br>
+                </div>
                 <div
                   class="card-footer border-0 px-4 py-5"
                   style="
@@ -206,7 +129,7 @@
                   <h5
                     class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0"
                   >
-                    Total paid: <span class="h2 mb-0 ms-2">$1040</span>
+                    Total paid: <span class="h2 mb-0 ms-2">{{order.totalPrice | currency: 'INR'}}</span>
                   </h5>
                 </div>
               </div>
