--- a/Frontend/Shopcart/src/app/Pages/order/orders/orders.component.html
+++ b/Frontend/Shopcart/src/app/Pages/order/orders/orders.component.html
@@ -7,19 +7,24 @@
     <div class="orderId">
       <div class="row">
         <div class="col-6"><p>Order ID : {{order._id}}</p></div>
-        <div class="col-6 delete-item"><a (click)="cancelOrder(order._id)" class="btn btn-dark"><i class="fas fa-trash"></i></a></div>
+        <div class="col-6 delete-item">
+          <p>Cancel Order</p>
+          <a (click)="cancelOrder(order._id)" class="btn btn-dark trash">
+            <i class="fas fa-trash"></i>
+          </a>
+        </div>
       </div>
     </div>
     <div class="card bg-light-subtle mt-4">
-      <img src="https://res.cloudinary.com/dfbg8piep/image/upload/v1723107559/uploads/f2.png" class="card-img-top" alt="...">
+      <img src="{{order.productImage}}" class="card-img-top" alt="...">
       <div class="card-body">
         <div class="text-section">
-          <h5 class="card-title fw-bold">Carton Printed Tshirts</h5>
-          <p class="card-text">Adidas Carton Printed Tshirts Black</p>
+          <h5 class="card-title fw-bold">{{order.productName}}</h5>
+          <p class="card-text">{{order.productDescription}}</p>
         </div>
         <div class="cta-section">
           <div>{{order.totalPrice | currency : 'INR'}}</div>
-          <a (click)="orderDetail()" class="btn btn-dark">More Details</a>
+          <a (click)="orderDetail(order._id)" class="btn btn-dark">More Details</a>
         </div>
       </div>
     </div>
