--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.css
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.css
@@ -94,6 +94,7 @@ nav .nav-content .links {
 }
 .wrapper #show-search:checked ~ .search-icon i::before {
   content: "\f00d";
+  margin-left: 130px;
 }
 
 .wrapper .search-box {
