--- a/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
+++ b/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
@@ -5,9 +5,17 @@
     object-fit: scale-down;
 }
 .productImage img{
+	border-radius: 12px;
 	width: 100%;
-    height: 400px;
+    height: 360px;
     object-fit: scale-down;
+}
+.box-img img{
+	border-radius: 12px;
+	padding-bottom: 28px;
+	width: 155%;
+    object-fit: cover;
+
 }
 .pd-wrap {
 	padding: 40px 0;
@@ -283,15 +291,24 @@
 	cursor: pointer;
 }
 
+.fa-heart{
+    margin-left: 50px;
+    margin-top: 4px;
+    font-size: 25px;
+	cursor: pointer;
+}
 
 
 /* Add to cart button code  */
 
 .product-color{
-    border: 2px solid #000;
+    border: none;
     width: 20px;
     height: 20px;
     border-radius: 50%;
+}
+.color .active{
+	border: 2px solid #000;
 }
 .purchase-info{
 	margin: 1.5rem 0;
@@ -319,3 +336,11 @@
 .purchase-info .btn:hover{
     opacity: 0.9;
 }
+
+/* Media query */
+
+@media screen and (max-width: 992px) {
+	.box-img img{
+		width: 0%;
+	}
+  }
